--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
     width: 95%;
     margin: 0 auto;
     padding-top: 50px;
+    min-width: 320px;
 }
 
 .dessert-cards {
@@ -27,11 +28,68 @@ body {
 img {
     width: 100%;
     height: 200px;
-    margin-bottom: 30px;
+}
+
+.dessert-info {
+    padding: 30px 10px 15px;
 }
 
 .dessert-title {
-    font-size: 40px;
+    font-size: 35px;
     color: #b8c23f;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+}
+
+.dessert-retsept {
+    font-size: 14px;
+    line-height: 22px;
+    color: #959395;
+}
+
+@media screen and (max-width: 992px) {
+    .dessert-cards {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .dessert-cards {
+        grid-template-columns: 1fr;
+        margin-bottom: 0;
+        grid-gap: 0;
+    }
+
+    .dessert-cards-item {
+        display: flex;
+        align-items: center;
+        border-top: 15px solid #000;
+        border-bottom: 15px solid #000;
+    }
+
+    .dessert-cards-item:nth-child(2) img,
+    .dessert-cards-item:nth-child(4) img {
+        order: 1;
+    }
+
+    img {
+        padding: 10px 0;
+        width: 50%;
+        height: 250px;
+    }
+
+}
+
+@media screen and (max-width: 547px) {
+    img {
+        width: 100%;
+    }
+
+    .dessert-cards-item:nth-child(2) img,
+    .dessert-cards-item:nth-child(4) img {
+        order: 0;
+    }
+
+    .dessert-cards-item {
+        flex-direction: column;
+    }
 }
